<resources>
    <string name="app_name">Movie App</string>
    <string name="img_description">Image Description</string>
    <string name="movie_name">Name</string>
    <string name="movie_description">Description</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="change_language">Change Language</string>
    <string name="text_1">Movies</string>
    <string name="text_2">TV Show</string>
    <string name="tes">tes</string>
    <string name="title_activity_onboarding1">onboarding1</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="text_onboard_1">Watch with your family</string>
    <string name="next">Next</string>
    <string name="text_onboard_2">Watch everywhere you are</string>
    <string name="text_onboard_3">Have a great movie night</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_sign_in">Sign In To Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="new_member">New Member?</string>
    <string name="sing_up">Sing Up</string>
    <string name="or_sign_in_with">Or Sign In with</string>
    <string name="username">Username</string>
    <string name="get_started">Get Started</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_a_member">Already a member?</string>
    <string name="sign_in">Sign In</string>
    <string name="forgotten_your_password">Forgotten Your Password?</string>
    <string name="text_forgotten">Enter your email address and we would send you a link to reset your password</string>
    <string name="send_email">Send Email</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <string name="genre">Genre</string>
    <string name="top_this_month">Top This Month</string>
    <string name="image_view">Image View</string>
    <string name="list_tittle">Raya And The Last Dragon</string>
    <string name="list_year">year</string>
    <string name="list_rate">rate</string>
    <string name="floating_button">Floating Button</string>
    <string name="genre_detail">Action | Animation | Adventure | Drama | Fantasy | Family</string>
    <string name="synopsis_detail">Synopsis</string>
    <string name="text_synopsis">Long ago, in the fantasy world of Kumandra, humans and dragons lived together in harmony. But when an evil force threatened the land, the dragons sacrificed themselves to save humanity. Now, 500 years later, that same evil has returned and it’s up to a lone warrior, Raya, to track down the legendary last dragon to restore the fractured land and its divided people.</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="watch_now">Watch Now</string>
    <string name="error_text">Not empty</string>
    <string name="text_user">Users</string>
    <string name="error_register">Register Failed</string>
    <string name="thomas">Thomas Brodie-Sangster</string>
    <string name="email_profile">thomassangster@gmail.com</string>
    <string name="preference">Preference</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="change_account">Change Account</string>
    <string name="language">Language</string>
    <string name="bookmark">Bookmark</string>
    <string name="setting">Setting</string>
    <string name="privacy_and_setting">Privacy and Setting Help</string>
    <string name="profile">Profile</string>
    <string name="trending_now">Trending Now</string>
    <string name="logout">Logout</string>
    <string name="text_error_message">Error</string>
    <string name="text_message_password">Please Input Your Password</string>
    <string name="text_message_email">Please Input Your Email</string>
    <string name="text_message_username">Please Input Your Username</string>
    <string name="synopsis">Synopsis</string>
    <string name="trailer">Trailer</string>
    <string name="user_name">Name</string>
    <string name="fullname">Fullname</string>
</resources>