<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/margin_all"
    android:background="@color/main_color"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_thumb"
        android:layout_width="@dimen/width_thumb_movie_list"
        android:layout_height="@dimen/height_thumb_movie_list"
        android:contentDescription="@string/img_description"
        android:scaleType="fitXY"
        tools:src="@color/black" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_thumb"
        android:layout_marginStart="@dimen/_16dp"
        android:textColor="@color/white"
        android:maxLines="2"
        android:textStyle="bold"
        tools:text="@string/movie_name" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/padding_subtitle_movie_list"
        android:layout_toEndOf="@id/img_thumb"
        android:textColor="@color/white"
        android:ellipsize="end"
        android:maxLines="3"
        tools:text="@string/movie_description" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/list_year"
        android:layout_toEndOf="@id/img_thumb"
        android:textColor="@color/light_grey"
        android:textSize="15sp"
        android:layout_below="@id/tv_desc"/>

    <TextView
        android:id="@+id/tv_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_150dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/list_rate"
        android:layout_toEndOf="@id/tv_year"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_below="@id/tv_desc"/>

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_rate"
        android:layout_marginStart="125dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@id/tv_year"
        android:text="@string/genre"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>