<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_backdrop_path"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_258dp"
            android:src="@drawable/mini_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_258dp"
            android:src="@drawable/backdrop_path"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:layout_marginTop="164dp"
            android:background="@drawable/background_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_back_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:background="@color/main_color"
            android:contentDescription="@string/floating_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_picture_detail"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="@dimen/_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fb_back_detail"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/iv_detail_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_view"
                android:scaleType="centerCrop"
                android:src="@drawable/detail_picture" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_detail"
            android:layout_width="179dp"
            android:layout_height="75dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/list_tittle"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cv_picture_detail"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <TextView
            android:id="@+id/tv_year_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/list_year"
            android:textColor="@color/light_grey"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/cv_picture_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

        <TextView
            android:id="@+id/tv_rate_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_100dp"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/list_rate"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/tv_year_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="35dp"
            android:text="@string/synopsis_detail"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_picture_detail" />

        <TextView
            android:id="@+id/tv_synopsis_detail"
            android:layout_width="325dp"
            android:layout_height="161dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/text_synopsis"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/_15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsis" />

        <TextView
            android:id="@+id/tv_watch_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_45dp"
            android:text="@string/watch_trailer"
            android:textColor="@color/red"
            android:textSize="@dimen/_18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_synopsis_detail" />

        <Button
            android:layout_width="@dimen/_202dp"
            android:layout_height="@dimen/_55dp"
            android:layout_marginTop="@dimen/_25dp"
            android:background="@drawable/button_background"
            android:text="@string/watch_now"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_watch_trailer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>